refactoring app, create routing, change feature of search movie

--- a/src/app/core/modal-search/modal-search.component.html
+++ b/src/app/core/modal-search/modal-search.component.html
@@ -1,6 +1,6 @@
 <div class="modalBox">
     <img class="fullLogo" src="../../../assets/logo.png" alt="Logo Search Movie" />
     <div class="formWrapper">
-        <app-searchform (searchedValue)="searchedValue($event)"></app-searchform>
+        <app-searchform></app-searchform>
     </div>
 </div>
