create component - header of search movie

--- a/src/app/core/modal-movie-list/modal-movie-list.component.html
+++ b/src/app/core/modal-movie-list/modal-movie-list.component.html
@@ -1,1 +1,6 @@
-<p>modal-movie-list works!</p>
+<div class="modalFetchMovies">
+    <div class="header">
+        <app-header-fetch-movies [searchMovie]="searchMovie"></app-header-fetch-movies>
+    </div>
+    <!-- <MoviesList movies={movies} /> -->
+</div>
