--- a/src/app/core/modal-movie-list/modal-movie-list.component.scss
+++ b/src/app/core/modal-movie-list/modal-movie-list.component.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  overflow: scroll;
 
   @include bigDesktop {
     width: 70vw;
@@ -23,6 +24,5 @@
     width: 100%;
     height: 100px;
     text-align: center;
-    overflow: hidden;
   }
 }
