--- a/src/app/core/modal-movie-list/modal-movie-list.component.scss
+++ b/src/app/core/modal-movie-list/modal-movie-list.component.scss
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: flex-start;
   overflow: scroll;
+  z-index: 997;
 
   @include bigDesktop {
     width: 70vw;
