refactoring app, create services, components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <router-outlet></router-outlet>
 <app-watchlist></app-watchlist>
+
+<app-modal-details-movie *ngIf="modalDetailsMovie.isOpen" [idMovie]="modalDetailsMovie.idMovie">
+</app-modal-details-movie>
