--- a/src/app/core/watchlist/fav-movie/fav-movie.component.html
+++ b/src/app/core/watchlist/fav-movie/fav-movie.component.html
@@ -8,7 +8,7 @@
                 <button (click)="openDetailsModal(movie.movieID)" class="btnOpen">
                     <img src="../../../../assets/icons/open.svg" alt="Open icon" class="optionBtn" />
                 </button>
-                <button (click)="action('remove', movie.movieID)" class="btnRemove">
+                <button (click)="remove(movie.movieID)" class="btnRemove">
                     <img src="../../../../assets/icons/removeFromWatchlist.svg" alt="Remove icon" class="optionBtn" />
                 </button>
             </div>
