--- a/src/app/core/modal-movie-list/modal-movie-list.component.html
+++ b/src/app/core/modal-movie-list/modal-movie-list.component.html
@@ -2,8 +2,6 @@
     <div class="header">
         <app-header-fetch-movies [searchMovie]="searchMovie"></app-header-fetch-movies>
     </div>
-    <app-movie-list *ngIf="movies" [movies]="movies.Search" (openModalDetails)="openModal($event)"></app-movie-list>
+    <app-movie-list *ngIf="movies" [movies]="movies.Search" (openModalDetails)="openModalDetails($event)">
+    </app-movie-list>
 </div>
-<app-modal-details-movie *ngIf="modalDetailsMovie.isOpen" [idMovie]="modalDetailsMovie.idMovie"
-    (closeModal)="onCloseModal()">
-</app-modal-details-movie>
