create small button functionality - add movie to watchlist

--- a/src/app/core/modal-details-movie/notification/notification.component.html
+++ b/src/app/core/modal-details-movie/notification/notification.component.html
@@ -1,1 +1,2 @@
-<p>notification works!</p>
+<h5 *ngIf="actionType === 'add'" class="notification add">{{actionMessage}}</h5>
+<h5 *ngIf="actionType === 'remove'" class="notification remove">{{actionMessage}}</h5>
